<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/contador"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/contadorTexto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginEnd="140dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="129dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="150dp">

        <Button
            android:id="@+id/incrementar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@android:color/holo_green_dark"
            android:onClick="incrementarContador"
            android:text="@string/incrementar"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/resetear" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/descrementar"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@android:color/holo_red_dark"
            android:onClick="decrementarContador"
            android:text="@string/descrementar"
            android:textSize="60sp"
            app:layout_constraintTop_toBottomOf="@+id/resetear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/deshabilitar_descrementar"
            android:textColor="@android:color/holo_red_dark" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:cursorVisible="false"
            android:singleLine="false"
            android:text="@string/editTextNumber"
            android:layout_margin="40dp"
            android:labelFor="@id/editText"
            android:autofillHints="no" tools:targetApi="o"/>

        <Button
            android:id="@+id/resetear"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@android:color/darker_gray"
            android:onClick="reseteaContador"
            android:text="@string/resetear" />
    </LinearLayout>

</RelativeLayout>